src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>BXGO_Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multinational</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>GPO</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Loss_Winning_Reason__c</fullName>
        <label>Loss/Winning Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Local Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Ease of use</fullName>
                </value>
                <value>
                    <fullName>Environmental Impact</fullName>
                </value>
                <value>
                    <fullName>Security of Supply</fullName>
                </value>
                <value>
                    <fullName>Special Product Feature</fullName>
                </value>
                <value>
                    <fullName>Value Adds</fullName>
                </value>
                <value>
                    <fullName>Clinical Evidence</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Registration status</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Product reputation</fullName>
                </value>
                <value>
                    <fullName>Missed deadline (only lost)</fullName>
                </value>
                <value>
                    <fullName>Insufficient revenue (only lost)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Main_Competitor_1_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Main Competitor 1 win the Opportunity?</inlineHelpText>
        <label>Main Competitor 1 Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXGO_Main_Competitor_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Main Competitor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Main Competitor 1)</relationshipLabel>
        <relationshipName>Opportunities_Main_Competitor_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Main_Competitor_2_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Main Competitor 2 win the Opportunity?</inlineHelpText>
        <label>Main Competitor 2 Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXGO_Main_Competitor_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Main Competitor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Main Competitor 2)</relationshipLabel>
        <relationshipName>Opportunities_Main_Competitor_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Main_Competitor_3_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Main Competitor 3 win the Opportunity?</inlineHelpText>
        <label>Main Competitor 3 Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXGO_Main_Competitor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Competitor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Main Competitor 3)</relationshipLabel>
        <relationshipName>Opportunities_Main_Competitor_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Minimum_MGP__c</fullName>
        <label>Minimum MGP</label>
        <summarizedField>OpportunityLineItem.BXGO_MGP__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BXGO_Number_of_Competitors__c</fullName>
        <label>Number of Competitors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BXGO_Offer_Submission_Deadline__c</fullName>
        <inlineHelpText>Date by which the offer has to be submitted to the customer.</inlineHelpText>
        <label>Offer Submission Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXGO_Offer_Submitted__c</fullName>
        <label>Offer Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXGO_Opportunity_has_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity has Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXGO_Parent_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Parent Opportunity (e.g. Whole Tender) which this Opportunity (e.g. Lot) belongs to.</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>BXGO_Parent_Opportunity__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Penalties__c</fullName>
        <inlineHelpText>Possible misbehavior from Baxter, which will cause monetary penalties.</inlineHelpText>
        <label>Penalties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non delivery of product</fullName>
                </value>
                <value>
                    <fullName>Manufacturing defects</fullName>
                </value>
                <value>
                    <fullName>Minimum shelf-life</fullName>
                </value>
                <value>
                    <fullName>Late shipment</fullName>
                </value>
                <value>
                    <fullName>Wrong location</fullName>
                </value>
                <value>
                    <fullName>Wrong billing</fullName>
                </value>
                <value>
                    <fullName>Contract cancellation</fullName>
                </value>
                <value>
                    <fullName>Wrong country of origin</fullName>
                </value>
                <value>
                    <fullName>Other penalty reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Price_Level__c</fullName>
        <label>Price Level</label>
        <summarizedField>OpportunityLineItem.BXGO_Price_Level__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BXGO_Price_Level_indicator__c</fullName>
        <formula>IMAGE(
  CASE( BXGO_Price_Level__c,
    0, &quot;/img/samples/light_red.gif&quot;,
    0.5, &quot;/img/samples/light_yellow.gif&quot;,
    &quot;/img/samples/light_green.gif&quot;
  ),
  &quot;Measures sales price against price guidance&quot; )</formula>
        <label>Price Level indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BXGO_Pricing_Finalized__c</fullName>
        <label>Pricing Finalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXGO_Reason_for_not_participating__c</fullName>
        <label>Reason for not participating</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Baxter products</fullName>
                </value>
                <value>
                    <fullName>Non-compliant to conditions</fullName>
                </value>
                <value>
                    <fullName>Non-core / obsolete products</fullName>
                </value>
                <value>
                    <fullName>Volume too low</fullName>
                </value>
                <value>
                    <fullName>Insufficient Baxter production capacity</fullName>
                </value>
                <value>
                    <fullName>Unfavorable terms &amp; conditions</fullName>
                </value>
                <value>
                    <fullName>Did not meet quality requirements</fullName>
                </value>
                <value>
                    <fullName>Price too low; Remote location</fullName>
                </value>
                <value>
                    <fullName>Strategic competitor account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Tender_Delayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tender Delayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXGO_Tender_Issued__c</fullName>
        <label>Tender Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXGO_Tender_in_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Tender included in the Forecast?</inlineHelpText>
        <label>Tender in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BXGO_Total_penalties_impact__c</fullName>
        <inlineHelpText>Maximum accumulated monetary impact by penalties.</inlineHelpText>
        <label>Total penalties impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-10k USD</fullName>
                </value>
                <value>
                    <fullName>10k-50k USD</fullName>
                </value>
                <value>
                    <fullName>50k-100k USD</fullName>
                </value>
                <value>
                    <fullName>100k-500k USD</fullName>
                </value>
                <value>
                    <fullName>500k+ USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Volume_below_Floor__c</fullName>
        <label>Volume below Floor</label>
        <summarizedField>OpportunityLineItem.BXGO_Volume_below_Floor__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Loss_Winning_Reason__c</fullName>
        <inlineHelpText>In case the list of values from Loss reason are not applicable, please specify the loss reason on this field</inlineHelpText>
        <label>Other Loss/Winning Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>BXGO_Amount_in_current_Forecast__c</columns>
        <columns>BXBE_Price_impact__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>BXGO_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>BXGO_Amount_in_current_Forecast__c</columns>
        <columns>BXBE_Price_impact__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>BXBE_Parent_Account_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>BXGO_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>BXGO_Standard_Non_Tender</fullName>
        <active>true</active>
        <businessProcess>BXGO_Standard_Non_Tender_Process</businessProcess>
        <label>Standard_Non_Tender</label>
    </recordTypes>
    <recordTypes>
        <fullName>BXGO_Standard_Tender</fullName>
        <active>true</active>
        <businessProcess>BXGO_Standard_Tender_Process</businessProcess>
        <label>Standard_Tender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic_for_UAT</fullName>
        <active>true</active>
        <businessProcess>Generic for UAT</businessProcess>
        <description>generic record type created for UAT lookup Associated Critical Metrics</description>
        <label>Generic for UAT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BXBE_Tender_issued</fullName>
        <active>true</active>
        <description>Tender issued is mandatory for Benelux Tenders.</description>
        <errorConditionFormula>AND(OR( ISPICKVAL( BST_Country__c , &quot;Belgium&quot;), ISPICKVAL( BST_Country__c , &quot;Netherlands&quot;)),   RecordType.DeveloperName = &quot;BXGO_Standard_Tender&quot;,  ISBLANK( BXGO_Tender_Issued__c ) )</errorConditionFormula>
        <errorDisplayField>BXGO_Tender_Issued__c</errorDisplayField>
        <errorMessage>Please enter the (expected) tender issue date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BXCA_Account_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( BST_Country__c , &quot;Canada&quot;) &amp;&amp; ISBLANK( AccountId ) &amp;&amp;  RecordType.DeveloperName = &apos;BXGO_Standard_Non_Tender&apos;</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please enter the Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BXCA_GL_required_information</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( BXCA_GL_Status__c , &apos;Submitted&apos;) &amp;&amp; (ISBLANK( BXCA_GL_Ship_to_Number__c ) || ISBLANK( BXCA_GL_Marketing_Manager_Involved__c ) || BXCA_GL_Products_without_GL_information__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>BXCA_GL_Status__c</errorDisplayField>
        <errorMessage>Please ensure that the Ship to Number and Marketing Manager Involved have been specified and that Product details have been added in the Related Tab.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BXGO_Reason_for_not_participating</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( StageName , &apos;No Participation&apos;), ISPICKVAL( BXGO_Reason_for_not_participating__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>BXGO_Reason_for_not_participating__c</errorDisplayField>
        <errorMessage>Please specify reason for not participating.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BXGO_Total_penalties_impact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  BXGO_Penalties__c )),  ISPICKVAL( BXGO_Total_penalties_impact__c, &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>BXGO_Total_penalties_impact__c</errorDisplayField>
        <errorMessage>Please specify the potential impact of the penalties.</errorMessage>
    </validationRules>
</CustomObject>